WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
20925
LEAK messages appear every time I quit
https://bugs.webkit.org/show_bug.cgi?id=20925
Summary
LEAK messages appear every time I quit
Darin Adler
Reported
2008-09-18 15:49:30 PDT
I'm seeing LEAK messages every time I quit. That makes them useless.
Attachments
patch
(14.20 KB, patch)
2008-09-18 16:03 PDT
,
Darin Adler
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Darin Adler
Comment 1
2008-09-18 16:03:40 PDT
Created
attachment 23543
[details]
patch
Sam Weinig
Comment 2
2008-09-18 16:17:21 PDT
Comment on
attachment 23543
[details]
patch The JavaScriptCore changes seem really unrelated and can be landed separately before. The content of RefCountedLeakCounter.cpp should not be indented. r=me
Darin Adler
Comment 3
2008-09-18 16:42:22 PDT
http://trac.webkit.org/changeset/36631
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug