JavaScriptCore/wtf/RefCountedLeakCounter.cpp
@@ -19,78 +19,82 @@
  */
 
 #include "config.h"
-
 #include "RefCountedLeakCounter.h"
-#include "UnusedParam.h"
+
+#include <wtf/HashCountedSet.h>
 
 namespace WTF {
 
-#ifndef NDEBUG
-    static bool logLeakMessages = true;
-#endif
-    
-    void setLogLeakMessages(bool _logLeakMessages )
-    {
-        UNUSED_PARAM(_logLeakMessages);
-#ifndef NDEBUG
-        logLeakMessages = _logLeakMessages;
-#endif
-    }
-    
-    
-#ifndef NDEBUG
-#define LOG_CHANNEL_PREFIX Log
-    static WTFLogChannel LogRefCountedLeaks = { 0x00000000, "", WTFLogChannelOn };
-#endif
+#ifdef NDEBUG
 
-    RefCountedLeakCounter::~RefCountedLeakCounter()
-    {
-#ifndef NDEBUG
-        if (count && logLeakMessages)
-            LOG(RefCountedLeaks, "LEAK: %u %s\n", count, description);
-#endif
-    }
+static void RefCountedLeakCounter::suppressMessages(const char*) { }
+static void RefCountedLeakCounter::cancelMessageSuppression(const char*) { }
 
-    RefCountedLeakCounter::RefCountedLeakCounter(const char* desc)
-    {
-        UNUSED_PARAM(desc);
-#ifndef NDEBUG
-        description = desc;
-#endif
-    }
+RefCountedLeakCounter::RefCountedLeakCounter(const char*) { }
+RefCountedLeakCounter::~RefCountedLeakCounter() { }
 
-#if ENABLE(JSC_MULTIPLE_THREADS)
-
-    void RefCountedLeakCounter::increment()
-    {
-#ifndef NDEBUG
-        atomicIncrement(&count);
-#endif
-    }
-
-    void RefCountedLeakCounter::decrement()
-    {
-#ifndef NDEBUG
-        atomicDecrement(&count);
-#endif
-    }
+void RefCountedLeakCounter::increment() { }
+void RefCountedLeakCounter::decrement() { }
 
 #else
 
-    void RefCountedLeakCounter::increment()
-    {
-#ifndef NDEBUG
-        ++count;
-#endif
+#define LOG_CHANNEL_PREFIX Log
+static WTFLogChannel LogRefCountedLeaks = { 0x00000000, "", WTFLogChannelOn };
+
+typedef HashCountedSet<const char*, PtrHash<const char*> > ReasonSet;
+static ReasonSet* leakMessageSuppressionReasons;
+
+void RefCountedLeakCounter::suppressMessages(const char* reason)
+{
+    if (!leakMessageSuppressionReasons)
+        leakMessageSuppressionReasons = new ReasonSet;
+    leakMessageSuppressionReasons->add(reason);
+}
+
+void RefCountedLeakCounter::cancelMessageSuppression(const char* reason)
+{
+    ASSERT(leakMessageSuppressionReasons);
+    ASSERT(leakMessageSuppressionReasons->contains(reason));
+    leakMessageSuppressionReasons->remove(reason);
+}
+
+RefCountedLeakCounter::RefCountedLeakCounter(const char* description)
+    : m_description(description)
+{
+}    
+
+RefCountedLeakCounter::~RefCountedLeakCounter()
+{
+    static bool loggedSuppressionReason;
+    if (m_count) {
+        if (!leakMessageSuppressionReasons || leakMessageSuppressionReasons->isEmpty())
+            LOG(RefCountedLeaks, "LEAK: %u %s", m_count, m_description);
+        else if (!loggedSuppressionReason) {
+            // This logs only one reason. Later we could change it so we log all the reasons.
+            LOG(RefCountedLeaks, "No leak checking done: %s", leakMessageSuppressionReasons->begin()->first);
+            loggedSuppressionReason = true;
+        }
     }
+}
 
-    void RefCountedLeakCounter::decrement()
-    {
-#ifndef NDEBUG
-        --count;
+void RefCountedLeakCounter::increment()
+{
+#if ENABLE(JSC_MULTIPLE_THREADS)
+    atomicIncrement(&m_count);
+#else
+    ++m_count;
 #endif
-    }
+}
+
+void RefCountedLeakCounter::decrement()
+{
+#if ENABLE(JSC_MULTIPLE_THREADS)
+    atomicDecrement(&m_count);
+#else
+    --m_count;
+#endif
+}
 
 #endif
 
-} // Namespace WTF
+} // namespace WTF
